add device adapter ...

--- a/IoTLight/app/src/main/res/values/strings.xml
+++ b/IoTLight/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">IoT Light</string>
+
+    <!-- Device Item -->
+    <string name="device_id">Device name</string>
+    <string name="temperature">25°C</string>
+    <string name="humidity">50 %</string>
 </resources>
